--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -165,10 +165,10 @@ nav {
 }
 .slider-area2 {
   background-color: #2490eb;
-
-  background-image: url("https://www.transparenttextures.com/patterns/climpek.png"); /* Set your desired background color */
+  box-shadow: 0px 8px 16px rgba(4, 120, 236, 0.2);
+  background-image: url("https://www.transparenttextures.com/patterns/blizzard.png"); /* Set your desired background color */
   color: #fff; /* Set text color for the slider area */
-  padding: 100px 0; /* Adjust the padding as needed */
+  padding: 60px 0; /* Adjust the padding as needed */
 }
 
 /* Center the content in the container */
